testsuite/tests/shouldRun/SimplMandelbrot2.sf
--> 1

let rec
  bar (f : Int -> Int -> Int) (x : Int) (y : Int) : Int = bar f x y
and
  foo (c : Int) : Int = 1
;
1
