testsuite/tests/should_fail/LetRecMissingAnnot.sf
let rec f (x:Int) : Int = g x
and     g (x:Int)       = f x
in
1